tests/unit/test_recursive_type/make.out
make: Entering directory '/nfs-scratch/jtm2066/object-ir/dev'
make -C .githooks all
make[1]: Entering directory '/nfs-scratch/jtm2066/object-ir/dev/.githooks'
make[1]: Nothing to be done for 'all'.
make[1]: Leaving directory '/nfs-scratch/jtm2066/object-ir/dev/.githooks'
mkdir -p .build.dir
mkdir -p install
cmake -DCMAKE_C_COMPILER=`which clang` -DCMAKE_CXX_COMPILER=`which clang++` -S . -B .build.dir
-- LLVM IR Utils
-- Building with -fPIC
-- Linker detection: GNU ld
-- LLVM_DIR IS /project/extra/llvm/9.0.0/release/lib/cmake/llvm.
-- Configuring done
-- Generating done
-- Build files have been written to: /nfs-scratch/jtm2066/object-ir/dev/.build.dir
make -C .build.dir all -j8
make[1]: Entering directory '/nfs-scratch/jtm2066/object-ir/dev/.build.dir'
make[2]: Entering directory '/nfs-scratch/jtm2066/object-ir/dev/.build.dir'
make[3]: Entering directory '/nfs-scratch/jtm2066/object-ir/dev/.build.dir'
make[3]: Entering directory '/nfs-scratch/jtm2066/object-ir/dev/.build.dir'
make[3]: Entering directory '/nfs-scratch/jtm2066/object-ir/dev/.build.dir'
make[3]: Entering directory '/nfs-scratch/jtm2066/object-ir/dev/.build.dir'
make[3]: Entering directory '/nfs-scratch/jtm2066/object-ir/dev/.build.dir'
make[3]: Entering directory '/nfs-scratch/jtm2066/object-ir/dev/.build.dir'
make[3]: Entering directory '/nfs-scratch/jtm2066/object-ir/dev/.build.dir'
make[3]: Entering directory '/nfs-scratch/jtm2066/object-ir/dev/.build.dir'
make[3]: Leaving directory '/nfs-scratch/jtm2066/object-ir/dev/.build.dir'
Consolidate compiler generated dependencies of target memoir_library
make[3]: Leaving directory '/nfs-scratch/jtm2066/object-ir/dev/.build.dir'
[  4%] Built target memoir_bitcodes
[ 10%] Built target memoir_library
make[3]: Entering directory '/nfs-scratch/jtm2066/object-ir/dev/.build.dir'
Consolidate compiler generated dependencies of target Example
make[3]: Leaving directory '/nfs-scratch/jtm2066/object-ir/dev/.build.dir'
Consolidate compiler generated dependencies of target ObjectInlining
Consolidate compiler generated dependencies of target Normalization
Consolidate compiler generated dependencies of target StructOfArrays
make[3]: Leaving directory '/nfs-scratch/jtm2066/object-ir/dev/.build.dir'
make[3]: Leaving directory '/nfs-scratch/jtm2066/object-ir/dev/.build.dir'
make[3]: Leaving directory '/nfs-scratch/jtm2066/object-ir/dev/.build.dir'
Consolidate compiler generated dependencies of target ObjectLowering
make[3]: Leaving directory '/nfs-scratch/jtm2066/object-ir/dev/.build.dir'
make[3]: Leaving directory '/nfs-scratch/jtm2066/object-ir/dev/.build.dir'
Consolidate compiler generated dependencies of target ObjectAbstraction
make[3]: Leaving directory '/nfs-scratch/jtm2066/object-ir/dev/.build.dir'
make[3]: Entering directory '/nfs-scratch/jtm2066/object-ir/dev/.build.dir'
make[3]: Entering directory '/nfs-scratch/jtm2066/object-ir/dev/.build.dir'
make[3]: Entering directory '/nfs-scratch/jtm2066/object-ir/dev/.build.dir'
make[3]: Entering directory '/nfs-scratch/jtm2066/object-ir/dev/.build.dir'
[ 15%] Built target memoir
make[3]: Entering directory '/nfs-scratch/jtm2066/object-ir/dev/.build.dir'
[ 16%] Building CXX object compiler/passes/example/CMakeFiles/Example.dir/__/common/analysis/src/AccessAnalysis.cpp.o
make[3]: Entering directory '/nfs-scratch/jtm2066/object-ir/dev/.build.dir'
[ 17%] Building CXX object compiler/passes/object_inlining/CMakeFiles/ObjectInlining.dir/__/common/analysis/src/AccessAnalysis.cpp.o
[ 18%] Building CXX object compiler/passes/normalization/CMakeFiles/Normalization.dir/__/common/analysis/src/AccessAnalysis.cpp.o
[ 19%] Building CXX object compiler/passes/struct_of_arrays/CMakeFiles/StructOfArrays.dir/__/common/analysis/src/AccessAnalysis.cpp.o
[ 20%] Building CXX object compiler/passes/object_lowering/CMakeFiles/ObjectLowering.dir/__/common/analysis/src/AccessAnalysis.cpp.o
[ 21%] Building CXX object compiler/passes/object_abstraction/CMakeFiles/ObjectAbstraction.dir/__/common/analysis/src/AccessAnalysis.cpp.o
[ 22%] Building CXX object compiler/passes/object_abstraction/CMakeFiles/ObjectAbstraction.dir/__/common/analysis/src/FieldSummary.cpp.o
[ 23%] Building CXX object compiler/passes/object_abstraction/CMakeFiles/ObjectAbstraction.dir/__/common/analysis/src/ObjectPrinter.cpp.o
/nfs-scratch/jtm2066/object-ir/dev/compiler/passes/common/analysis/src/AccessAnalysis.cpp:113:43: error: no viable overloaded '='
      this->field_accesses[field_summary] = read_summary;
      ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ ^ ~~~~~~~~~~~~
/usr/lib/gcc/x86_64-redhat-linux/8/../../../../include/c++/8/bits/unordered_set.h:265:7: note: candidate function not viable: no known conversion from 'llvm::memoir::MustReadSummary *' to 'const std::unordered_set<llvm::memoir::AccessSummary *, std::hash<llvm::memoir::AccessSummary *>, std::equal_to<llvm::memoir::AccessSummary *>, std::allocator<llvm::memoir::AccessSummary *> >' for 1st argument
      operator=(const unordered_set&) = default;
      ^
/usr/lib/gcc/x86_64-redhat-linux/8/../../../../include/c++/8/bits/unordered_set.h:269:7: note: candidate function not viable: no known conversion from 'llvm::memoir::MustReadSummary *' to 'std::unordered_set<llvm::memoir::AccessSummary *, std::hash<llvm::memoir::AccessSummary *>, std::equal_to<llvm::memoir::AccessSummary *>, std::allocator<llvm::memoir::AccessSummary *> >' for 1st argument
      operator=(unordered_set&&) = default;
      ^
/usr/lib/gcc/x86_64-redhat-linux/8/../../../../include/c++/8/bits/unordered_set.h:283:7: note: candidate function not viable: no known conversion from 'llvm::memoir::MustReadSummary *' to 'initializer_list<std::unordered_set<llvm::memoir::AccessSummary *, std::hash<llvm::memoir::AccessSummary *>, std::equal_to<llvm::memoir::AccessSummary *>, std::allocator<llvm::memoir::AccessSummary *> >::value_type>' (aka 'initializer_list<llvm::memoir::AccessSummary *>') for 1st argument
      operator=(initializer_list<value_type> __l)
      ^
/nfs-scratch/jtm2066/object-ir/dev/compiler/passes/common/analysis/src/AccessAnalysis.cpp:130:26: error: use of undeclared identifier 'field_summary'
    this->field_accesses[field_summary] = may_read_summary;
                         ^
/nfs-scratch/jtm2066/object-ir/dev/compiler/passes/common/analysis/src/AccessAnalysis.cpp:156:43: error: no viable overloaded '='
      this->field_accesses[field_summary] = write_summary;
      ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ ^ ~~~~~~~~~~~~~
/usr/lib/gcc/x86_64-redhat-linux/8/../../../../include/c++/8/bits/unordered_set.h:265:7: note: candidate function not viable: no known conversion from 'llvm::memoir::MustWriteSummary *' to 'const std::unordered_set<llvm::memoir::AccessSummary *, std::hash<llvm::memoir::AccessSummary *>, std::equal_to<llvm::memoir::AccessSummary *>, std::allocator<llvm::memoir::AccessSummary *> >' for 1st argument
      operator=(const unordered_set&) = default;
      ^
/usr/lib/gcc/x86_64-redhat-linux/8/../../../../include/c++/8/bits/unordered_set.h:269:7: note: candidate function not viable: no known conversion from 'llvm::memoir::MustWriteSummary *' to 'std::unordered_set<llvm::memoir::AccessSummary *, std::hash<llvm::memoir::AccessSummary *>, std::equal_to<llvm::memoir::AccessSummary *>, std::allocator<llvm::memoir::AccessSummary *> >' for 1st argument
      operator=(unordered_set&&) = default;
      ^
/usr/lib/gcc/x86_64-redhat-linux/8/../../../../include/c++/8/bits/unordered_set.h:283:7: note: candidate function not viable: no known conversion from 'llvm::memoir::MustWriteSummary *' to 'initializer_list<std::unordered_set<llvm::memoir::AccessSummary *, std::hash<llvm::memoir::AccessSummary *>, std::equal_to<llvm::memoir::AccessSummary *>, std::allocator<llvm::memoir::AccessSummary *> >::value_type>' (aka 'initializer_list<llvm::memoir::AccessSummary *>') for 1st argument
      operator=(initializer_list<value_type> __l)
      ^
/nfs-scratch/jtm2066/object-ir/dev/compiler/passes/common/analysis/src/AccessAnalysis.cpp:175:47: error: no viable overloaded '='
    this->field_accesses[first_field_summary] = may_write_summary;
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ ^ ~~~~~~~~~~~~~~~~~
/usr/lib/gcc/x86_64-redhat-linux/8/../../../../include/c++/8/bits/unordered_set.h:265:7: note: candidate function not viable: no known conversion from 'llvm::memoir::MayWriteSummary *' to 'const std::unordered_set<llvm::memoir::AccessSummary *, std::hash<llvm::memoir::AccessSummary *>, std::equal_to<llvm::memoir::AccessSummary *>, std::allocator<llvm::memoir::AccessSummary *> >' for 1st argument
      operator=(const unordered_set&) = default;
      ^
/usr/lib/gcc/x86_64-redhat-linux/8/../../../../include/c++/8/bits/unordered_set.h:269:7: note: candidate function not viable: no known conversion from 'llvm::memoir::MayWriteSummary *' to 'std::unordered_set<llvm::memoir::AccessSummary *, std::hash<llvm::memoir::AccessSummary *>, std::equal_to<llvm::memoir::AccessSummary *>, std::allocator<llvm::memoir::AccessSummary *> >' for 1st argument
      operator=(unordered_set&&) = default;
      ^
/usr/lib/gcc/x86_64-redhat-linux/8/../../../../include/c++/8/bits/unordered_set.h:283:7: note: candidate function not viable: no known conversion from 'llvm::memoir::MayWriteSummary *' to 'initializer_list<std::unordered_set<llvm::memoir::AccessSummary *, std::hash<llvm::memoir::AccessSummary *>, std::equal_to<llvm::memoir::AccessSummary *>, std::allocator<llvm::memoir::AccessSummary *> >::value_type>' (aka 'initializer_list<llvm::memoir::AccessSummary *>') for 1st argument
      operator=(initializer_list<value_type> __l)
      ^
/nfs-scratch/jtm2066/object-ir/dev/compiler/passes/common/analysis/src/AccessAnalysis.cpp:113:43: error: no viable overloaded '='
      this->field_accesses[field_summary] = read_summary;
      ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ ^ ~~~~~~~~~~~~
/usr/lib/gcc/x86_64-redhat-linux/8/../../../../include/c++/8/bits/unordered_set.h:265:7: note: candidate function not viable: no known conversion from 'llvm::memoir::MustReadSummary *' to 'const std::unordered_set<llvm::memoir::AccessSummary *, std::hash<llvm::memoir::AccessSummary *>, std::equal_to<llvm::memoir::AccessSummary *>, std::allocator<llvm::memoir::AccessSummary *> >' for 1st argument
      operator=(const unordered_set&) = default;
      ^
/usr/lib/gcc/x86_64-redhat-linux/8/../../../../include/c++/8/bits/unordered_set.h:269:7: note: candidate function not viable: no known conversion from 'llvm::memoir::MustReadSummary *' to 'std::unordered_set<llvm::memoir::AccessSummary *, std::hash<llvm::memoir::AccessSummary *>, std::equal_to<llvm::memoir::AccessSummary *>, std::allocator<llvm::memoir::AccessSummary *> >' for 1st argument
      operator=(unordered_set&&) = default;
      ^
/usr/lib/gcc/x86_64-redhat-linux/8/../../../../include/c++/8/bits/unordered_set.h:283:7: note: candidate function not viable: no known conversion from 'llvm::memoir::MustReadSummary *' to 'initializer_list<std::unordered_set<llvm::memoir::AccessSummary *, std::hash<llvm::memoir::AccessSummary *>, std::equal_to<llvm::memoir::AccessSummary *>, std::allocator<llvm::memoir::AccessSummary *> >::value_type>' (aka 'initializer_list<llvm::memoir::AccessSummary *>') for 1st argument
      operator=(initializer_list<value_type> __l)
      ^
/nfs-scratch/jtm2066/object-ir/dev/compiler/passes/common/analysis/src/AccessAnalysis.cpp:130:26: error: use of undeclared identifier 'field_summary'
    this->field_accesses[field_summary] = may_read_summary;
                         ^
/nfs-scratch/jtm2066/object-ir/dev/compiler/passes/common/analysis/src/AccessAnalysis.cpp:156:43: error: no viable overloaded '='
      this->field_accesses[field_summary] = write_summary;
      ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ ^ ~~~~~~~~~~~~~
/usr/lib/gcc/x86_64-redhat-linux/8/../../../../include/c++/8/bits/unordered_set.h:265:7: note: candidate function not viable: no known conversion from 'llvm::memoir::MustWriteSummary *' to 'const std::unordered_set<llvm::memoir::AccessSummary *, std::hash<llvm::memoir::AccessSummary *>, std::equal_to<llvm::memoir::AccessSummary *>, std::allocator<llvm::memoir::AccessSummary *> >' for 1st argument
      operator=(const unordered_set&) = default;
      ^
/usr/lib/gcc/x86_64-redhat-linux/8/../../../../include/c++/8/bits/unordered_set.h:269:7: note: candidate function not viable: no known conversion from 'llvm::memoir::MustWriteSummary *' to 'std::unordered_set<llvm::memoir::AccessSummary *, std::hash<llvm::memoir::AccessSummary *>, std::equal_to<llvm::memoir::AccessSummary *>, std::allocator<llvm::memoir::AccessSummary *> >' for 1st argument
      operator=(unordered_set&&) = default;
      ^
/usr/lib/gcc/x86_64-redhat-linux/8/../../../../include/c++/8/bits/unordered_set.h:283:7: note: candidate function not viable: no known conversion from 'llvm::memoir::MustWriteSummary *' to 'initializer_list<std::unordered_set<llvm::memoir::AccessSummary *, std::hash<llvm::memoir::AccessSummary *>, std::equal_to<llvm::memoir::AccessSummary *>, std::allocator<llvm::memoir::AccessSummary *> >::value_type>' (aka 'initializer_list<llvm::memoir::AccessSummary *>') for 1st argument
      operator=(initializer_list<value_type> __l)
      ^
/nfs-scratch/jtm2066/object-ir/dev/compiler/passes/common/analysis/src/AccessAnalysis.cpp:175:47: error: no viable overloaded '='
    this->field_accesses[first_field_summary] = may_write_summary;
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ ^ ~~~~~~~~~~~~~~~~~
/usr/lib/gcc/x86_64-redhat-linux/8/../../../../include/c++/8/bits/unordered_set.h:265:7: note: candidate function not viable: no known conversion from 'llvm::memoir::MayWriteSummary *' to 'const std::unordered_set<llvm::memoir::AccessSummary *, std::hash<llvm::memoir::AccessSummary *>, std::equal_to<llvm::memoir::AccessSummary *>, std::allocator<llvm::memoir::AccessSummary *> >' for 1st argument
      operator=(const unordered_set&) = default;
      ^
/usr/lib/gcc/x86_64-redhat-linux/8/../../../../include/c++/8/bits/unordered_set.h:269:7: note: candidate function not viable: no known conversion from 'llvm::memoir::MayWriteSummary *' to 'std::unordered_set<llvm::memoir::AccessSummary *, std::hash<llvm::memoir::AccessSummary *>, std::equal_to<llvm::memoir::AccessSummary *>, std::allocator<llvm::memoir::AccessSummary *> >' for 1st argument
      operator=(unordered_set&&) = default;
      ^
/usr/lib/gcc/x86_64-redhat-linux/8/../../../../include/c++/8/bits/unordered_set.h:283:7: note: candidate function not viable: no known conversion from 'llvm::memoir::MayWriteSummary *' to 'initializer_list<std::unordered_set<llvm::memoir::AccessSummary *, std::hash<llvm::memoir::AccessSummary *>, std::equal_to<llvm::memoir::AccessSummary *>, std::allocator<llvm::memoir::AccessSummary *> >::value_type>' (aka 'initializer_list<llvm::memoir::AccessSummary *>') for 1st argument
      operator=(initializer_list<value_type> __l)
      ^
/nfs-scratch/jtm2066/object-ir/dev/compiler/passes/common/analysis/src/AccessAnalysis.cpp:113:43: error: no viable overloaded '='
      this->field_accesses[field_summary] = read_summary;
      ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ ^ ~~~~~~~~~~~~
/usr/lib/gcc/x86_64-redhat-linux/8/../../../../include/c++/8/bits/unordered_set.h:265:7: note: candidate function not viable: no known conversion from 'llvm::memoir::MustReadSummary *' to 'const std::unordered_set<llvm::memoir::AccessSummary *, std::hash<llvm::memoir::AccessSummary *>, std::equal_to<llvm::memoir::AccessSummary *>, std::allocator<llvm::memoir::AccessSummary *> >' for 1st argument
      operator=(const unordered_set&) = default;
      ^
/usr/lib/gcc/x86_64-redhat-linux/8/../../../../include/c++/8/bits/unordered_set.h:269:7: note: candidate function not viable: no known conversion from 'llvm::memoir::MustReadSummary *' to 'std::unordered_set<llvm::memoir::AccessSummary *, std::hash<llvm::memoir::AccessSummary *>, std::equal_to<llvm::memoir::AccessSummary *>, std::allocator<llvm::memoir::AccessSummary *> >' for 1st argument
      operator=(unordered_set&&) = default;
      ^
/usr/lib/gcc/x86_64-redhat-linux/8/../../../../include/c++/8/bits/unordered_set.h:283:7: note: candidate function not viable: no known conversion from 'llvm::memoir::MustReadSummary *' to 'initializer_list<std::unordered_set<llvm::memoir::AccessSummary *, std::hash<llvm::memoir::AccessSummary *>, std::equal_to<llvm::memoir::AccessSummary *>, std::allocator<llvm::memoir::AccessSummary *> >::value_type>' (aka 'initializer_list<llvm::memoir::AccessSummary *>') for 1st argument
      operator=(initializer_list<value_type> __l)
      ^
/nfs-scratch/jtm2066/object-ir/dev/compiler/passes/common/analysis/src/AccessAnalysis.cpp:130:26: error: use of undeclared identifier 'field_summary'
    this->field_accesses[field_summary] = may_read_summary;
                         ^
/nfs-scratch/jtm2066/object-ir/dev/compiler/passes/common/analysis/src/AccessAnalysis.cpp:156:43: error: no viable overloaded '='
      this->field_accesses[field_summary] = write_summary;
      ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ ^ ~~~~~~~~~~~~~
/usr/lib/gcc/x86_64-redhat-linux/8/../../../../include/c++/8/bits/unordered_set.h:265:7: note: candidate function not viable: no known conversion from 'llvm::memoir::MustWriteSummary *' to 'const std::unordered_set<llvm::memoir::AccessSummary *, std::hash<llvm::memoir::AccessSummary *>, std::equal_to<llvm::memoir::AccessSummary *>, std::allocator<llvm::memoir::AccessSummary *> >' for 1st argument
      operator=(const unordered_set&) = default;
      ^
/usr/lib/gcc/x86_64-redhat-linux/8/../../../../include/c++/8/bits/unordered_set.h:269:7: note: candidate function not viable: no known conversion from 'llvm::memoir::MustWriteSummary *' to 'std::unordered_set<llvm::memoir::AccessSummary *, std::hash<llvm::memoir::AccessSummary *>, std::equal_to<llvm::memoir::AccessSummary *>, std::allocator<llvm::memoir::AccessSummary *> >' for 1st argument
      operator=(unordered_set&&) = default;
      ^
/usr/lib/gcc/x86_64-redhat-linux/8/../../../../include/c++/8/bits/unordered_set.h:283:7: note: candidate function not viable: no known conversion from 'llvm::memoir::MustWriteSummary *' to 'initializer_list<std::unordered_set<llvm::memoir::AccessSummary *, std::hash<llvm::memoir::AccessSummary *>, std::equal_to<llvm::memoir::AccessSummary *>, std::allocator<llvm::memoir::AccessSummary *> >::value_type>' (aka 'initializer_list<llvm::memoir::AccessSummary *>') for 1st argument
      operator=(initializer_list<value_type> __l)
      ^
/nfs-scratch/jtm2066/object-ir/dev/compiler/passes/common/analysis/src/AccessAnalysis.cpp:175:47: error: no viable overloaded '='
    this->field_accesses[first_field_summary] = may_write_summary;
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ ^ ~~~~~~~~~~~~~~~~~
/usr/lib/gcc/x86_64-redhat-linux/8/../../../../include/c++/8/bits/unordered_set.h:265:7: note: candidate function not viable: no known conversion from 'llvm::memoir::MayWriteSummary *' to 'const std::unordered_set<llvm::memoir::AccessSummary *, std::hash<llvm::memoir::AccessSummary *>, std::equal_to<llvm::memoir::AccessSummary *>, std::allocator<llvm::memoir::AccessSummary *> >' for 1st argument
      operator=(const unordered_set&) = default;
      ^
/usr/lib/gcc/x86_64-redhat-linux/8/../../../../include/c++/8/bits/unordered_set.h:269:7: note: candidate function not viable: no known conversion from 'llvm::memoir::MayWriteSummary *' to 'std::unordered_set<llvm::memoir::AccessSummary *, std::hash<llvm::memoir::AccessSummary *>, std::equal_to<llvm::memoir::AccessSummary *>, std::allocator<llvm::memoir::AccessSummary *> >' for 1st argument
      operator=(unordered_set&&) = default;
      ^
/usr/lib/gcc/x86_64-redhat-linux/8/../../../../include/c++/8/bits/unordered_set.h:283:7: note: candidate function not viable: no known conversion from 'llvm::memoir::MayWriteSummary *' to 'initializer_list<std::unordered_set<llvm::memoir::AccessSummary *, std::hash<llvm::memoir::AccessSummary *>, std::equal_to<llvm::memoir::AccessSummary *>, std::allocator<llvm::memoir::AccessSummary *> >::value_type>' (aka 'initializer_list<llvm::memoir::AccessSummary *>') for 1st argument
      operator=(initializer_list<value_type> __l)
      ^
/nfs-scratch/jtm2066/object-ir/dev/compiler/passes/common/analysis/src/AccessAnalysis.cpp:113:43: error: no viable overloaded '='
      this->field_accesses[field_summary] = read_summary;
      ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ ^ ~~~~~~~~~~~~
/usr/lib/gcc/x86_64-redhat-linux/8/../../../../include/c++/8/bits/unordered_set.h:265:7: note: candidate function not viable: no known conversion from 'llvm::memoir::MustReadSummary *' to 'const std::unordered_set<llvm::memoir::AccessSummary *, std::hash<llvm::memoir::AccessSummary *>, std::equal_to<llvm::memoir::AccessSummary *>, std::allocator<llvm::memoir::AccessSummary *> >' for 1st argument
      operator=(const unordered_set&) = default;
      ^
/usr/lib/gcc/x86_64-redhat-linux/8/../../../../include/c++/8/bits/unordered_set.h:269:7: note: candidate function not viable: no known conversion from 'llvm::memoir::MustReadSummary *' to 'std::unordered_set<llvm::memoir::AccessSummary *, std::hash<llvm::memoir::AccessSummary *>, std::equal_to<llvm::memoir::AccessSummary *>, std::allocator<llvm::memoir::AccessSummary *> >' for 1st argument
      operator=(unordered_set&&) = default;
      ^
/usr/lib/gcc/x86_64-redhat-linux/8/../../../../include/c++/8/bits/unordered_set.h:283:7: note: candidate function not viable: no known conversion from 'llvm::memoir::MustReadSummary *' to 'initializer_list<std::unordered_set<llvm::memoir::AccessSummary *, std::hash<llvm::memoir::AccessSummary *>, std::equal_to<llvm::memoir::AccessSummary *>, std::allocator<llvm::memoir::AccessSummary *> >::value_type>' (aka 'initializer_list<llvm::memoir::AccessSummary *>') for 1st argument
      operator=(initializer_list<value_type> __l)
      ^
/nfs-scratch/jtm2066/object-ir/dev/compiler/passes/common/analysis/src/AccessAnalysis.cpp:130:26: error: use of undeclared identifier 'field_summary'
    this->field_accesses[field_summary] = may_read_summary;
                         ^
/nfs-scratch/jtm2066/object-ir/dev/compiler/passes/common/analysis/src/AccessAnalysis.cpp:156:43: error: no viable overloaded '='
      this->field_accesses[field_summary] = write_summary;
      ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ ^ ~~~~~~~~~~~~~
/usr/lib/gcc/x86_64-redhat-linux/8/../../../../include/c++/8/bits/unordered_set.h:265:7: note: candidate function not viable: no known conversion from 'llvm::memoir::MustWriteSummary *' to 'const std::unordered_set<llvm::memoir::AccessSummary *, std::hash<llvm::memoir::AccessSummary *>, std::equal_to<llvm::memoir::AccessSummary *>, std::allocator<llvm::memoir::AccessSummary *> >' for 1st argument
      operator=(const unordered_set&) = default;
      ^
/usr/lib/gcc/x86_64-redhat-linux/8/../../../../include/c++/8/bits/unordered_set.h:269:7: note: candidate function not viable: no known conversion from 'llvm::memoir::MustWriteSummary *' to 'std::unordered_set<llvm::memoir::AccessSummary *, std::hash<llvm::memoir::AccessSummary *>, std::equal_to<llvm::memoir::AccessSummary *>, std::allocator<llvm::memoir::AccessSummary *> >' for 1st argument
      operator=(unordered_set&&) = default;
      ^
/usr/lib/gcc/x86_64-redhat-linux/8/../../../../include/c++/8/bits/unordered_set.h:283:7: note: candidate function not viable: no known conversion from 'llvm::memoir::MustWriteSummary *' to 'initializer_list<std::unordered_set<llvm::memoir::AccessSummary *, std::hash<llvm::memoir::AccessSummary *>, std::equal_to<llvm::memoir::AccessSummary *>, std::allocator<llvm::memoir::AccessSummary *> >::value_type>' (aka 'initializer_list<llvm::memoir::AccessSummary *>') for 1st argument
      operator=(initializer_list<value_type> __l)
      ^
/nfs-scratch/jtm2066/object-ir/dev/compiler/passes/common/analysis/src/AccessAnalysis.cpp:175:47: error: no viable overloaded '='
    this->field_accesses[first_field_summary] = may_write_summary;
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ ^ ~~~~~~~~~~~~~~~~~
/usr/lib/gcc/x86_64-redhat-linux/8/../../../../include/c++/8/bits/unordered_set.h:265:7: note: candidate function not viable: no known conversion from 'llvm::memoir::MayWriteSummary *' to 'const std::unordered_set<llvm::memoir::AccessSummary *, std::hash<llvm::memoir::AccessSummary *>, std::equal_to<llvm::memoir::AccessSummary *>, std::allocator<llvm::memoir::AccessSummary *> >' for 1st argument
      operator=(const unordered_set&) = default;
      ^
/usr/lib/gcc/x86_64-redhat-linux/8/../../../../include/c++/8/bits/unordered_set.h:269:7: note: candidate function not viable: no known conversion from 'llvm::memoir::MayWriteSummary *' to 'std::unordered_set<llvm::memoir::AccessSummary *, std::hash<llvm::memoir::AccessSummary *>, std::equal_to<llvm::memoir::AccessSummary *>, std::allocator<llvm::memoir::AccessSummary *> >' for 1st argument
      operator=(unordered_set&&) = default;
      ^
/usr/lib/gcc/x86_64-redhat-linux/8/../../../../include/c++/8/bits/unordered_set.h:283:7: note: candidate function not viable: no known conversion from 'llvm::memoir::MayWriteSummary *' to 'initializer_list<std::unordered_set<llvm::memoir::AccessSummary *, std::hash<llvm::memoir::AccessSummary *>, std::equal_to<llvm::memoir::AccessSummary *>, std::allocator<llvm::memoir::AccessSummary *> >::value_type>' (aka 'initializer_list<llvm::memoir::AccessSummary *>') for 1st argument
      operator=(initializer_list<value_type> __l)
      ^
/nfs-scratch/jtm2066/object-ir/dev/compiler/passes/common/analysis/src/AccessAnalysis.cpp:113:43: error: no viable overloaded '='
      this->field_accesses[field_summary] = read_summary;
      ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ ^ ~~~~~~~~~~~~
/usr/lib/gcc/x86_64-redhat-linux/8/../../../../include/c++/8/bits/unordered_set.h:265:7: note: candidate function not viable: no known conversion from 'llvm::memoir::MustReadSummary *' to 'const std::unordered_set<llvm::memoir::AccessSummary *, std::hash<llvm::memoir::AccessSummary *>, std::equal_to<llvm::memoir::AccessSummary *>, std::allocator<llvm::memoir::AccessSummary *> >' for 1st argument
      operator=(const unordered_set&) = default;
      ^
/usr/lib/gcc/x86_64-redhat-linux/8/../../../../include/c++/8/bits/unordered_set.h:269:7: note: candidate function not viable: no known conversion from 'llvm::memoir::MustReadSummary *' to 'std::unordered_set<llvm::memoir::AccessSummary *, std::hash<llvm::memoir::AccessSummary *>, std::equal_to<llvm::memoir::AccessSummary *>, std::allocator<llvm::memoir::AccessSummary *> >' for 1st argument
      operator=(unordered_set&&) = default;
      ^
/usr/lib/gcc/x86_64-redhat-linux/8/../../../../include/c++/8/bits/unordered_set.h:283:7: note: candidate function not viable: no known conversion from 'llvm::memoir::MustReadSummary *' to 'initializer_list<std::unordered_set<llvm::memoir::AccessSummary *, std::hash<llvm::memoir::AccessSummary *>, std::equal_to<llvm::memoir::AccessSummary *>, std::allocator<llvm::memoir::AccessSummary *> >::value_type>' (aka 'initializer_list<llvm::memoir::AccessSummary *>') for 1st argument
      operator=(initializer_list<value_type> __l)
      ^
/nfs-scratch/jtm2066/object-ir/dev/compiler/passes/common/analysis/src/AccessAnalysis.cpp:130:26: error: use of undeclared identifier 'field_summary'
    this->field_accesses[field_summary] = may_read_summary;
                         ^
/nfs-scratch/jtm2066/object-ir/dev/compiler/passes/common/analysis/src/AccessAnalysis.cpp:156:43: error: no viable overloaded '='
      this->field_accesses[field_summary] = write_summary;
      ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ ^ ~~~~~~~~~~~~~
/usr/lib/gcc/x86_64-redhat-linux/8/../../../../include/c++/8/bits/unordered_set.h:265:7: note: candidate function not viable: no known conversion from 'llvm::memoir::MustWriteSummary *' to 'const std::unordered_set<llvm::memoir::AccessSummary *, std::hash<llvm::memoir::AccessSummary *>, std::equal_to<llvm::memoir::AccessSummary *>, std::allocator<llvm::memoir::AccessSummary *> >' for 1st argument
      operator=(const unordered_set&) = default;
      ^
/usr/lib/gcc/x86_64-redhat-linux/8/../../../../include/c++/8/bits/unordered_set.h:269:7: note: candidate function not viable: no known conversion from 'llvm::memoir::MustWriteSummary *' to 'std::unordered_set<llvm::memoir::AccessSummary *, std::hash<llvm::memoir::AccessSummary *>, std::equal_to<llvm::memoir::AccessSummary *>, std::allocator<llvm::memoir::AccessSummary *> >' for 1st argument
      operator=(unordered_set&&) = default;
      ^
/usr/lib/gcc/x86_64-redhat-linux/8/../../../../include/c++/8/bits/unordered_set.h:283:7: note: candidate function not viable: no known conversion from 'llvm::memoir::MustWriteSummary *' to 'initializer_list<std::unordered_set<llvm::memoir::AccessSummary *, std::hash<llvm::memoir::AccessSummary *>, std::equal_to<llvm::memoir::AccessSummary *>, std::allocator<llvm::memoir::AccessSummary *> >::value_type>' (aka 'initializer_list<llvm::memoir::AccessSummary *>') for 1st argument
      operator=(initializer_list<value_type> __l)
      ^
/nfs-scratch/jtm2066/object-ir/dev/compiler/passes/common/analysis/src/AccessAnalysis.cpp:175:47: error: no viable overloaded '='
    this->field_accesses[first_field_summary] = may_write_summary;
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ ^ ~~~~~~~~~~~~~~~~~
/usr/lib/gcc/x86_64-redhat-linux/8/../../../../include/c++/8/bits/unordered_set.h:265:7: note: candidate function not viable: no known conversion from 'llvm::memoir::MayWriteSummary *' to 'const std::unordered_set<llvm::memoir::AccessSummary *, std::hash<llvm::memoir::AccessSummary *>, std::equal_to<llvm::memoir::AccessSummary *>, std::allocator<llvm::memoir::AccessSummary *> >' for 1st argument
      operator=(const unordered_set&) = default;
      ^
/usr/lib/gcc/x86_64-redhat-linux/8/../../../../include/c++/8/bits/unordered_set.h:269:7: note: candidate function not viable: no known conversion from 'llvm::memoir::MayWriteSummary *' to 'std::unordered_set<llvm::memoir::AccessSummary *, std::hash<llvm::memoir::AccessSummary *>, std::equal_to<llvm::memoir::AccessSummary *>, std::allocator<llvm::memoir::AccessSummary *> >' for 1st argument
      operator=(unordered_set&&) = default;
      ^
/usr/lib/gcc/x86_64-redhat-linux/8/../../../../include/c++/8/bits/unordered_set.h:283:7: note: candidate function not viable: no known conversion from 'llvm::memoir::MayWriteSummary *' to 'initializer_list<std::unordered_set<llvm::memoir::AccessSummary *, std::hash<llvm::memoir::AccessSummary *>, std::equal_to<llvm::memoir::AccessSummary *>, std::allocator<llvm::memoir::AccessSummary *> >::value_type>' (aka 'initializer_list<llvm::memoir::AccessSummary *>') for 1st argument
      operator=(initializer_list<value_type> __l)
      ^
/nfs-scratch/jtm2066/object-ir/dev/compiler/passes/common/analysis/src/AccessAnalysis.cpp:113:43: error: no viable overloaded '='
      this->field_accesses[field_summary] = read_summary;
      ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ ^ ~~~~~~~~~~~~
/usr/lib/gcc/x86_64-redhat-linux/8/../../../../include/c++/8/bits/unordered_set.h:265:7: note: candidate function not viable: no known conversion from 'llvm::memoir::MustReadSummary *' to 'const std::unordered_set<llvm::memoir::AccessSummary *, std::hash<llvm::memoir::AccessSummary *>, std::equal_to<llvm::memoir::AccessSummary *>, std::allocator<llvm::memoir::AccessSummary *> >' for 1st argument
      operator=(const unordered_set&) = default;
      ^
/usr/lib/gcc/x86_64-redhat-linux/8/../../../../include/c++/8/bits/unordered_set.h:269:7: note: candidate function not viable: no known conversion from 'llvm::memoir::MustReadSummary *' to 'std::unordered_set<llvm::memoir::AccessSummary *, std::hash<llvm::memoir::AccessSummary *>, std::equal_to<llvm::memoir::AccessSummary *>, std::allocator<llvm::memoir::AccessSummary *> >' for 1st argument
      operator=(unordered_set&&) = default;
      ^
/usr/lib/gcc/x86_64-redhat-linux/8/../../../../include/c++/8/bits/unordered_set.h:283:7: note: candidate function not viable: no known conversion from 'llvm::memoir::MustReadSummary *' to 'initializer_list<std::unordered_set<llvm::memoir::AccessSummary *, std::hash<llvm::memoir::AccessSummary *>, std::equal_to<llvm::memoir::AccessSummary *>, std::allocator<llvm::memoir::AccessSummary *> >::value_type>' (aka 'initializer_list<llvm::memoir::AccessSummary *>') for 1st argument
      operator=(initializer_list<value_type> __l)
      ^
/nfs-scratch/jtm2066/object-ir/dev/compiler/passes/common/analysis/src/AccessAnalysis.cpp:130:26: error: use of undeclared identifier 'field_summary'
    this->field_accesses[field_summary] = may_read_summary;
                         ^
/nfs-scratch/jtm2066/object-ir/dev/compiler/passes/common/analysis/src/AccessAnalysis.cpp:156:43: error: no viable overloaded '='
      this->field_accesses[field_summary] = write_summary;
      ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ ^ ~~~~~~~~~~~~~
/usr/lib/gcc/x86_64-redhat-linux/8/../../../../include/c++/8/bits/unordered_set.h:265:7: note: candidate function not viable: no known conversion from 'llvm::memoir::MustWriteSummary *' to 'const std::unordered_set<llvm::memoir::AccessSummary *, std::hash<llvm::memoir::AccessSummary *>, std::equal_to<llvm::memoir::AccessSummary *>, std::allocator<llvm::memoir::AccessSummary *> >' for 1st argument
      operator=(const unordered_set&) = default;
      ^
/usr/lib/gcc/x86_64-redhat-linux/8/../../../../include/c++/8/bits/unordered_set.h:269:7: note: candidate function not viable: no known conversion from 'llvm::memoir::MustWriteSummary *' to 'std::unordered_set<llvm::memoir::AccessSummary *, std::hash<llvm::memoir::AccessSummary *>, std::equal_to<llvm::memoir::AccessSummary *>, std::allocator<llvm::memoir::AccessSummary *> >' for 1st argument
      operator=(unordered_set&&) = default;
      ^
/usr/lib/gcc/x86_64-redhat-linux/8/../../../../include/c++/8/bits/unordered_set.h:283:7: note: candidate function not viable: no known conversion from 'llvm::memoir::MustWriteSummary *' to 'initializer_list<std::unordered_set<llvm::memoir::AccessSummary *, std::hash<llvm::memoir::AccessSummary *>, std::equal_to<llvm::memoir::AccessSummary *>, std::allocator<llvm::memoir::AccessSummary *> >::value_type>' (aka 'initializer_list<llvm::memoir::AccessSummary *>') for 1st argument
      operator=(initializer_list<value_type> __l)
      ^
/nfs-scratch/jtm2066/object-ir/dev/compiler/passes/common/analysis/src/AccessAnalysis.cpp:175:47: error: no viable overloaded '='
    this->field_accesses[first_field_summary] = may_write_summary;
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ ^ ~~~~~~~~~~~~~~~~~
/usr/lib/gcc/x86_64-redhat-linux/8/../../../../include/c++/8/bits/unordered_set.h:265:7: note: candidate function not viable: no known conversion from 'llvm::memoir::MayWriteSummary *' to 'const std::unordered_set<llvm::memoir::AccessSummary *, std::hash<llvm::memoir::AccessSummary *>, std::equal_to<llvm::memoir::AccessSummary *>, std::allocator<llvm::memoir::AccessSummary *> >' for 1st argument
      operator=(const unordered_set&) = default;
      ^
/usr/lib/gcc/x86_64-redhat-linux/8/../../../../include/c++/8/bits/unordered_set.h:269:7: note: candidate function not viable: no known conversion from 'llvm::memoir::MayWriteSummary *' to 'std::unordered_set<llvm::memoir::AccessSummary *, std::hash<llvm::memoir::AccessSummary *>, std::equal_to<llvm::memoir::AccessSummary *>, std::allocator<llvm::memoir::AccessSummary *> >' for 1st argument
      operator=(unordered_set&&) = default;
      ^
/usr/lib/gcc/x86_64-redhat-linux/8/../../../../include/c++/8/bits/unordered_set.h:283:7: note: candidate function not viable: no known conversion from 'llvm::memoir::MayWriteSummary *' to 'initializer_list<std::unordered_set<llvm::memoir::AccessSummary *, std::hash<llvm::memoir::AccessSummary *>, std::equal_to<llvm::memoir::AccessSummary *>, std::allocator<llvm::memoir::AccessSummary *> >::value_type>' (aka 'initializer_list<llvm::memoir::AccessSummary *>') for 1st argument
      operator=(initializer_list<value_type> __l)
      ^
4 errors generated.
make[3]: *** [compiler/passes/example/CMakeFiles/Example.dir/build.make:90: compiler/passes/example/CMakeFiles/Example.dir/__/common/analysis/src/AccessAnalysis.cpp.o] Error 1
make[3]: Leaving directory '/nfs-scratch/jtm2066/object-ir/dev/.build.dir'
make[2]: *** [CMakeFiles/Makefile2:821: compiler/passes/example/CMakeFiles/Example.dir/all] Error 2
make[2]: *** Waiting for unfinished jobs....
[ 23%] Building CXX object compiler/passes/object_abstraction/CMakeFiles/ObjectAbstraction.dir/__/common/analysis/src/ObjectSummary.cpp.o
4 errors generated.
make[3]: *** [compiler/passes/object_lowering/CMakeFiles/ObjectLowering.dir/build.make:146: compiler/passes/object_lowering/CMakeFiles/ObjectLowering.dir/__/common/analysis/src/AccessAnalysis.cpp.o] Error 1
make[3]: Leaving directory '/nfs-scratch/jtm2066/object-ir/dev/.build.dir'
make[2]: *** [CMakeFiles/Makefile2:535: compiler/passes/object_lowering/CMakeFiles/ObjectLowering.dir/all] Error 2
4 errors generated.
[ 24%] Building CXX object compiler/passes/object_abstraction/CMakeFiles/ObjectAbstraction.dir/__/common/analysis/src/TypePrinter.cpp.o
make[3]: *** [compiler/passes/struct_of_arrays/CMakeFiles/StructOfArrays.dir/build.make:118: compiler/passes/struct_of_arrays/CMakeFiles/StructOfArrays.dir/__/common/analysis/src/AccessAnalysis.cpp.o] Error 1
make[3]: Leaving directory '/nfs-scratch/jtm2066/object-ir/dev/.build.dir'
make[2]: *** [CMakeFiles/Makefile2:639: compiler/passes/struct_of_arrays/CMakeFiles/StructOfArrays.dir/all] Error 2
4 errors generated.
make[3]: *** [compiler/passes/object_inlining/CMakeFiles/ObjectInlining.dir/build.make:118: compiler/passes/object_inlining/CMakeFiles/ObjectInlining.dir/__/common/analysis/src/AccessAnalysis.cpp.o] Error 1
make[3]: Leaving directory '/nfs-scratch/jtm2066/object-ir/dev/.build.dir'
make[2]: *** [CMakeFiles/Makefile2:509: compiler/passes/object_inlining/CMakeFiles/ObjectInlining.dir/all] Error 2
4 errors generated.
make[3]: *** [compiler/passes/normalization/CMakeFiles/Normalization.dir/build.make:118: compiler/passes/normalization/CMakeFiles/Normalization.dir/__/common/analysis/src/AccessAnalysis.cpp.o] Error 1
make[3]: Leaving directory '/nfs-scratch/jtm2066/object-ir/dev/.build.dir'
make[2]: *** [CMakeFiles/Makefile2:717: compiler/passes/normalization/CMakeFiles/Normalization.dir/all] Error 2
4 errors generated.
make[3]: *** [compiler/passes/object_abstraction/CMakeFiles/ObjectAbstraction.dir/build.make:160: compiler/passes/object_abstraction/CMakeFiles/ObjectAbstraction.dir/__/common/analysis/src/AccessAnalysis.cpp.o] Error 1
make[3]: *** Waiting for unfinished jobs....
make[3]: Leaving directory '/nfs-scratch/jtm2066/object-ir/dev/.build.dir'
make[2]: *** [CMakeFiles/Makefile2:431: compiler/passes/object_abstraction/CMakeFiles/ObjectAbstraction.dir/all] Error 2
make[2]: Leaving directory '/nfs-scratch/jtm2066/object-ir/dev/.build.dir'
make[1]: *** [Makefile:136: all] Error 2
make[1]: Leaving directory '/nfs-scratch/jtm2066/object-ir/dev/.build.dir'
make: *** [Makefile:15: build] Error 2
make: Leaving directory '/nfs-scratch/jtm2066/object-ir/dev'
